gcc/testsuite/rust/rustc/ui/issues/issue-39974.rs
const LENGTH: f64 = 2;

struct Thing {
    f: [[f64; 2]; LENGTH],
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
}

fn main() {
    let _t = Thing { f: [[0.0, 0.0], [0.0, 0.0], [0.0, 0.0], [0.0, 0.0]] };
}

